k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: afrikfid
  labels:
    app.kubernetes.io/name: afrikfid
